# talk-to-my-data-agent

./: .Taskfile.template  .env.template  .gitignore  .prettierrc.json  .taskfile-data.yaml  .yamlfmt.yml  .yamllint  AGENTS.md  CHANGELOG.md  Makefile  README.md  Taskfile.yaml  alembic.ini  pyproject.toml  pytest.ini  quickstart.py  requirements.txt  test_pydantic.py  trivy-ignore.rego
.agents/skills/datarobot-app-framework-setup/: SKILL.md
.datarobot/answers/: .keep  datarobot_recipe.yml  e2e-tests.yml
.datarobot/cli/: base.yml  llm.yml  versions.yaml
.github/workflows/: app_backend-test.yml  app_frontend-vitest.yml  core-python.yml  dockerfile-lint.yml  frontend-test.yml  infra-python.yml  pulumi-up.yml  python-deps-install-test.yml  python-static-checks.yml  python-unit-tests.yml  shellcheck.yml  yaml-format.yml
app_backend/: .gitignore  .licenserc.yaml  README.md  Taskfile.yaml  build-app.sh  pyproject.toml  requirements.in  requirements.txt  start-app.sh
app_backend/app/: __init__.py  config.py  deps.py  main.py  middleware.py  profiling.py  rest_api.py
app_backend/app/routers/: __init__.py  chats.py  database.py  datasets.py  dictionaries.py  external_data_stores.py  registry.py  user.py
app_backend/app/telemetry/: __init__.py  logging.py  otel.py
app_backend/static/: index.html
app_backend/static/assets/: Chats-BVNXrrzT.js  Chats-DWbNSQug.js  Chats-Dm6XurMh.js  Chats-DyXNMxm6.js  Data-BbEmJA1y.js  Data-CAaqE1ib.js  Data-CKQ_cbEz.js  Data-D9n2QLwF.js  ResponseMessage-CI_rhTKa.js  ResponseMessage-D7joK-vm.js  ResponseMessage-DBbvZhaS.js  ResponseMessage-DhbwFvMo.js  index-0Q88gi2O.css  index-B4LBPR0-.css  index-D1zqzfRq.js  index-D6QBzYni.css  index-DIgxouRI.css  index-DSkPnGJe.js  index-DnsQ3JLc.js  index-LqEUI8Yy.js  loading-90-I1iuj.js  loading-B2MZ4gzn.js  loading-BUR0YvRX.js  loading-Dl0zvYh-.js  tabs-BabaHQce.js  tabs-D72dLQel.js  tabs-DD0yVPep.js  tabs-DZ6LFXAI.js
app_backend/templates/: index.html
app_backend/tests/: conftest.py  test_main.py  test_middleware.py  test_rest_api.py  test_version.py
app_frontend/: .gitignore  README.md  components.json  eslint.config.js  index.html  knip.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
app_frontend/src/: App.tsx  global.d.ts  index.css  main.tsx
app_frontend/src/api/: apiClient.ts  exceptions.ts
app_frontend/src/components/: AddDataModal.tsx  DataSourceSelector.tsx  DataSourceToggle.tsx  LanguageSwitcher.tsx  NewChatModal.tsx  RenameChatModal.tsx  SettingsModal.tsx  Sidebar.tsx  WelcomeModal.tsx
app_frontend/src/constants/: chat.ts  dataSources.ts
app_frontend/src/hooks/: useChatMessages.ts  useDatasetSearch.ts
app_frontend/src/i18n/: index.ts
app_frontend/src/lib/: utils.ts
app_frontend/tests/: setupTests.ts  test-utils.tsx
core/: README.md  Taskfile.yaml  pyproject.toml
core/src/core/: analyst_db.py  api.py  api_exceptions.py  chat_dataset_helper.py  code_execution.py  config.py  constants.py  credentials.py  data_cleansing_helpers.py  datarobot_client.py  deps.py  file_utils.py  llm_client.py  logging_helper.py  middleware.py  persistent_storage.py  prompts.py  rest_api.py  schema.py  telemetry  token_tracking.py  tools.py
core/src/core/data_connections/database/: database_implementations.py  database_interface.py
core/src/core/data_connections/database/datastore/: connection.py  preview.py  utils.py
core/src/core/data_connections/datarobot/: datarobot_dataset_handler.py  helpers.py
core/src/core/persistent_fs/: dr_file_system.py  duckdb_extension.py
core/src/core/routers/: __init__.py  chats.py  database.py  datasets.py  dictionaries.py  external_data_stores.py  registry.py  user.py
core/src/core/scripts/: dump_chat_history.py  transfer_database.py
core/src/core/telemetry/: __init__.py  enums.py  logging.py  metrics.py  otel.py  uvicorn_filter.py
core/tests/: conftest.py  test_analyst_db.py  test_api.py  test_business_analysis_sanitization.py  test_cleanse_dataset.py  test_concurrency.py  test_data_frame_model.py  test_database.py  test_datarobot_dataset_helper.py  test_dr_file_system.py  test_execute_python.py  test_get_database_operator.py  test_jdbc_preview_operator.py  test_metrics.py  test_persistent_storage.py  test_reflection.py  test_rest_api.py
core/tests/scripts/: test_dump_chat_history.py  test_transfer_database.py
docs/: Taskfile.yaml  base.md  llm.md
docs/.bin/: hooks.py  properdocs.yml  pyproject.toml
frontend/: 01_connect_and_explore.py  02_chat_with_data.py  README.md  Taskfile.yaml  app.py  app_settings.py  datarobot_connect.py  helpers.py  pyproject.toml  requirements.txt  start-app.sh
frontend/app/: 01_connect_and_explore.py  02_chat_with_data.py  app.py  app_settings.py  datarobot_connect.py  helpers.py
frontend/tests/: test_datarobot_connect.py  test_frontend.py
frontend_react/deploy/: requirements.txt
frontend_react/react_src/: README.md  package.json
infra/: AGENTS.md  Pulumi.yaml  Taskfile.yaml  __main__.py  app_frontend.py  feature_flag_requirements_llm_gateway.yaml  pyproject.toml  settings_app_infra.py  settings_database.py  settings_job_infra.py
infra/components/: dr_credential.py
infra/configurations/llm/: blueprint_with_external_llm.py  blueprint_with_llm_gateway.py  deployed_llm.py  external_llm.py  gateway_direct.py  nim_deployed_llm.py  registered_model.py
infra/infra/: __init__.py  app_backend.py  app_frontend.py  libllm.py
infra/infra/components/: dr_credential.py
migrations/: env.py
migrations/versions/: initial_migration.py
notebooks/: main.py
resources/app_usage_dashboard/: app.py  config.py  data_manager.py  kpi_calculations.py  visualizations.py
utils/: analyst_db.py  api.py  api_exceptions.py  base_telemetry.py  chat_dataset_helper.py  constants.py  credentials.py  data_analyst_telemetry.py  data_cleansing_helpers.py  database_config.py  database_helpers.py  datarobot_client.py  datarobot_dataset_handler.py  i18n.py  llm_client.py  logging_helper.py  models.py  persistent_storage.py  prompts.py  resources.py  rest_api.py  schema.py  token_tracking.py
(+191 files in other folders)
