[project]
name = "infra"
version = "0.0.1"
description = """
**Talk to My Data** delivers a seamless **talk-to-your-data** experience, transforming files, spreadsheets, and cloud data into actionable insights. Simply upload data, connect to Snowflake or BigQuery, or access datasets from DataRobot's Data Registry. Then, ask a question, and the agent recommends business analyses, generating **charts, tables, and even code** to help you interpret the results.

This intuitive experience is designed for **scalability and flexibility**, ensuring that whether you're working with a few thousand rows or billions, your data analysis remains **fast, efficient, and insightful**.
"""
requires-python = ">=3.11, <3.14"

dependencies = [
    "core",
    "datarobot>=3.8.2",
    "datarobot-pulumi-utils>=0.1.1",
    "litellm>=1.72.1",
    "pulumi>=3.175.0",
    "pulumi-datarobot>=0.10.17",
    "jinja2>=3.1.5,<4.0",
    "pulumi-command>=1.1.3",
    "ipdb>=0.13.13",
    "rpdb>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=7.4.0",
    "ruff>=0.14.8",
    "mypy>=1.8.0",
]

[tool.mypy]
exclude = "configurations"

[tool.uv.sources]
core = { path = "../core", editable = true }
